--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ relative_permalinks: true
 # Setup
 timezone:            your timezone # eg. Asia/Kathmandu
 locale:              your locale language # eg. en_us
-name:				         CO-THINGS Tech 科芯物联科技
-title:               CO-THINGS Tech 科芯物联科技
+name:				 site name
+title:               site title
 tagline:             'tagline'
 description:         'description'
 url:                 site url
